--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ПолкаХуй</title>
+    <title>Полка+</title>
     <meta name="description" content="Профессиональные услуги фулфилмента: складские услуги, обработка заказов, доставка и возвраты. Сократите расходы на логистику до 85% с Полка+">
     <meta name="author" content="FulFillPro" />
     <meta name="keywords" content="фулфилмент, склад, логистика, доставка, интернет-магазин, упаковка заказов">
